--- a/src/css/home.css
+++ b/src/css/home.css
@@ -21,6 +21,9 @@
         0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
     --sidebar-width: 260px;
 }
+.nav-icon {
+    width: 25px;
+}
 
 body {
     background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
